<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_lidar_utils</name>
  <version>0.0.0</version>
  <description>Set of utility nodes when using livox LiDARs</description>
  <maintainer email="davidedorigoni@gmail.com">DavDori</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>PCL</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>livox_ros_driver2</depend>
  <exec_depend>ros2launch</exec_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
